@@ -1,6 +1,5 @@
 # -*- coding: utf-8 -*-
 
-from __future__ import print_function, absolute_import, unicode_literals
 from yledl import YleDlDownloader, StreamFilters
 from yledl.backends import Backends, FailingBackend
 from yledl.streamflavor import StreamFlavor, FailedFlavor
