@@ -1,6 +1,5 @@
 # -*- coding: utf-8 -*-
 
-from __future__ import print_function, absolute_import, unicode_literals
 import pytest
 from datetime import datetime, date
 from yledl.timestamp import FixedOffset
