@@ -1,6 +1,5 @@
 # -*- coding: utf-8 -*-
 
-from __future__ import print_function, absolute_import, unicode_literals
 import logging
 from .backends import HLSBackend
 from .streamflavor import StreamFlavor, FailedFlavor
