@@ -1,4 +1,3 @@
-from __future__ import print_function, absolute_import, unicode_literals
 import logging
 import re
 import sys
