@@ -1,3 +1,1 @@
-from __future__ import unicode_literals
-
 version = '20201022'
